# multistager

./: .gitignore  Dockerfile.multi  README.md  pyproject.toml
examples/node/: node_app.Dockerfile  node_minimal.Dockerfile  node_yarn.Dockerfile
multistager/: classifier.py  cli.py  generator.py  parser.py  patterns.py
multistager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
