[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multistager"
version = "0.1.0"
description = "Convert single-stage Dockerfiles into multi-stage builds"
authors = [{name="Your Name", email="you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer",
    "rich"
]

[project.scripts]
multistager = "multistager.cli:main"
